data/application.css
GtkWidget {
	outline-width: 0px;
    text-shadow: none;
}

GtkTreeView {
    background-color: shade(@theme_bg_color, 1.02);
    padding: 3px 1px 3px 2px;
}

GtkTreeView row:hover {
    background-image: none;
    border-style: none;
}

GtkTreeView row:selected {
    background-image: none;
    border-style: none;
}

GtkTreeView:selected {
    background-color: alpha(@theme_fg_color, 0.07);
    color: @theme_fg_color;
}

GtkTreeView:hover {
    background-color: alpha(@theme_fg_color, 0.07);
    color: @theme_fg_color;
}

Gtk.ListBoxRow .menubutton {
	border-color: transparent;
	background-color: transparent;
	color: transparent;
}

Gtk.ListBoxRow .menubutton:hover {
	border-color: alpha(@theme_fg_color, 0.1);
}

.lollypop-title {
    font-weight: bold;
    padding: 0px 12px;
}

.lollypop-subtitle {
    font-size: smaller;
    opacity: 0.55;
    padding: 0px 12px;
}

.hovereffect {
    -gtk-image-effect: highlight;
}

.trackswidget {
	background-color: transparent;
}

.trackrow {
	background-color: transparent;
  	color: inherit;
}

.trackrow:hover {
	background-color: alpha(@theme_fg_color, 0.03);
  	color: inherit;
}

.trackrow:selected {
	background-color: transparent;
  	color: inherit;
}

.trackrowplaying {
	background-color: alpha(@theme_fg_color, 0.05);
  	color: inherit;
}

.trackrowplaying .menubutton{
	background-color: transparent;
    border-color: transparent;
  	color: transparent;
}

.trackrowplaying:hover .menubutton{
	border-color: transparent;
  	color: inherit;
}

.trackrowplaying:hover .menubutton:hover {
	border-color: alpha(#000000, 0.1);
}

.trackrow .menubutton {
	border-color: transparent;
	background-color: transparent;
	color: transparent;
}

.trackrow:hover .menubutton {
  	color: inherit;
}

.trackrow:hover .menubutton:hover {
	border-color: alpha(@theme_fg_color, 0.1);
}

.menu-selected {
	background-color: alpha(@theme_fg_color, 0.03);
  	color: inherit;
}

.menu-selected .menubutton{
	border-color: alpha(@theme_fg_color, 0.1);
  	color: inherit;
}

.menubutton {
	box-shadow: none;
	padding-top: 0;
	padding-bottom: 0;
	background-image: none;
    color: inherit;
}

.menubutton:hover {
	border-color: alpha(@theme_fg_color, 0.1);
  	color: inherit;
}

